Added figure and figcaption (HTML5) tags to images

--- a/gpg-keys/index.html
+++ b/gpg-keys/index.html
@@ -19,13 +19,16 @@
         <h1>Chris Bilger, M.C.S. | GPG Keys</h1>
       </div>
 
-      <img
-        id="header-image"
-        alt="Image of an enigma machine sitting in a display case"
-        src="../images/gpg-keys.avif"
-        width="320"
-        height="213.33"
-      />
+      <figure>
+        <img
+          id="header-image"
+          alt="Image of an enigma machine sitting in a display case"
+          src="../images/gpg-keys.avif"
+          width="320"
+          height="213.33"
+        />
+        <figcaption>An image of an enigma machine sitting in a display case</figcaption>
+      </figure>
 
       <section>
         <nav>
