--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
         <h1>Chris Bilger, M.C.S. | Portfolio</h1>
       </div>
 
-      <img id="header-image" alt="Image of Chris Bilger" src="./images/profile.avif" width="320" height="200.53" />
+      <figure>
+        <img
+          id="header-image"
+          alt="Image of Christopher and Victoria Bilger"
+          src="./images/profile.avif"
+          width="320"
+          height="200.53"
+        />
+        <figcaption>An image of Christopher and Victoria Bilger</figcaption>
+      </figure>
 
       <section>
         <nav>
