--- a/projects/index.html
+++ b/projects/index.html
@@ -19,13 +19,16 @@
         <h1>Chris Bilger, M.C.S. | Projects</h1>
       </div>
 
-      <img
-        id="header-image"
-        alt="Image of a programmer with CSS code on the wall behind him"
-        src="../images/projects.avif"
-        width="320"
-        height="222.33"
-      />
+      <figure>
+        <img
+          id="header-image"
+          alt="Image of a programmer with CSS code on the wall behind him"
+          src="../images/projects.avif"
+          width="320"
+          height="222.33"
+        />
+        <figcaption>An image of a programmer with CSS code on the wall behind him</figcaption>
+      </figure>
 
       <section>
         <nav>
