Added staff software engineer future position

--- a/index.html
+++ b/index.html
@@ -80,6 +80,20 @@
         <h2><a href="#professional-experience">Professional Experience</a></h2>
         <hr />
 
+        <!-- <aside>
+          <h3>Staff Software Engineer</h3>
+          <p class="talkiatry">Talkiatry, LLC</p>
+          <p><b>INSERT START DATE</b> - <b>Present</b></p>
+
+          <details>
+            <summary>Some of my most outstanding achievements include:</summary>
+
+            <ol>
+              <li>Too soon for any yet. Come back later for more information.</li>
+            </ol>
+          </details>
+        </aside> -->
+
         <aside>
           <h3>Senior Software Engineer</h3>
           <p class="talkiatry">Talkiatry, LLC</p>
