--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
         <hr />
 
         <!-- <aside>
+          <h3>Paternity Leave</h3>
+          <p class="family-medical-leave">Family and Medical Leave</p>
+          <p><b>INSERT START DATE</b> - <b>INSERT END DATE</b></p>
+
+          <p>
+            Spending a 12-week parental leave to provide support to my partner during the postpartum phase and create a
+            strong bond with our recently-born child.
+          </p>
+        </aside> -->
+
+        <!-- <aside>
           <h3>Staff Software Engineer</h3>
           <p class="talkiatry">Talkiatry, LLC</p>
           <p><b>INSERT START DATE</b> - <b>Present</b></p>
