--- a/index.html
+++ b/index.html
@@ -238,6 +238,19 @@
         </h2>
         <hr />
 
+        <!-- <aside>
+          <h3>MVP Proof of Concept</h3>
+          <p>
+            For Future You |
+            <a href="https://chrisbilger.com/for-future-you-mvp/" target="_blank">Website (MVP)</a>
+          </p>
+          <p><b>INSERT START DATE</b> - <b>INSERT END DATE</b></p>
+          <p>
+            MVP development and product-market fit testing for a blog-like website to share life events with family
+            members.
+          </p>
+        </aside> -->
+
         <aside>
           <h3>Academic Research: M.C.S.</h3>
           <a href="https://github.com/ChristopherBilg/research-papers" target="_blank">Research Papers</a>
