--- a/electronics/index.html
+++ b/electronics/index.html
@@ -44,14 +44,17 @@
     </header>
 
     <main>
-      <!-- <section>
-        <hr id="code-quality-and-over-the-air-ota-updates" />
+      <section>
+        <hr id="code-quality-and-new-modules" />
         <h2>
-          <a href="#code-quality-and-over-the-air-ota-updates">Code Quality & Over The Air (OTA) Updates</a>
+          <a href="#code-quality-and-new-modules">Code Quality & New Modules</a>
         </h2>
         <hr />
 
-        <p>The following enhancements have been made while I wait for a WS2812B LED strip to arrive in the mail:</p>
+        <p>
+          The following enhancements have been made while I start writing 3 new modules. The 3 new modules are for light
+          sensors, distance sensors, and WS2812B LED strips.
+        </p>
 
         <ol style="margin-left: 3rem; margin-right: auto">
           <li>
@@ -88,10 +91,14 @@
           <li>Actual serializable messages (using the ArduinoJSON library) instead of a delimited string</li>
         </ol>
 
-        <p>OTA updates TODO</p>
+        <p>
+          My next electronics update should, hopefully, be in regards to the 3 new modules that I
+          <i>just recently</i>
+          started working on.
+        </p>
       </section>
 
-      <br /> -->
+      <br />
 
       <section>
         <hr id="initial-mesh-network-setup" />
