--- a/404.html
+++ b/404.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" color-mode="user">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Christopher Bilger's Portfolio" />
+    <meta name="keywords" content="Resume, Portfolio, Personal, Projects, Electronics" />
+    <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>404 Page Not Found</title>
+
+    <title>Chris Bilger, M.C.S. | Error 404</title>
+    <link rel="icon" type="image/x-icon" href="../images/favicon.ico" />
+    <link rel="stylesheet" media="screen" href="../css/mvp.css" />
+    <link rel="stylesheet" media="screen" href="../css/styles.css" />
+
+    <script type="module" src="../js/theo/index.js"></script>
   </head>
+
   <body>
-    <h1>404</h1>
-    <p>Page Not Foundsdgf</p>
+    <header>
+      <div class="typewriter">
+        <h1>Chris Bilger, M.C.S. | Error 404</h1>
+      </div>
+
+      <section>
+        <nav>
+          <ul>
+            <li><a href="/">Back to Portfolio</a></li>
+          </ul>
+        </nav>
+      </section>
+    </header>
+
+    <main>
+      <p style="text-align: center">Error 404: Page Not Found</p>
+    </main>
   </body>
 </html>
