Next electronics post template

--- a/electronics/index.html
+++ b/electronics/index.html
@@ -44,6 +44,16 @@
     </header>
 
     <main>
+      <!-- <section>
+        <hr id="tbd" />
+        <h2><a href="#tbd">TBD</a></h2>
+        <hr />
+
+        <p></p>
+      </section>
+
+      <br /> -->
+
       <section>
         <hr id="code-quality-and-new-modules" />
         <h2>
