Added a little bit to the next electronics post

--- a/electronics/index.html
+++ b/electronics/index.html
@@ -45,11 +45,15 @@
 
     <main>
       <!-- <section>
-        <hr id="tbd" />
-        <h2><a href="#tbd">TBD</a></h2>
+        <hr id="light-sensors-distance-sensors-and-ws2812b-leds" />
+        <h2>
+          <a href="#light-sensors-distance-sensors-and-ws2812b-leds">Light Sensors, Distance Sensors, & WS2812B LEDs</a>
+        </h2>
         <hr />
 
-        <p></p>
+        <p>Light Sensors</p>
+        <p>Distance Sensors</p>
+        <p>WS2812B LEDs</p>
       </section>
 
       <br /> -->
