Added images to next electronics post

--- a/electronics/index.html
+++ b/electronics/index.html
@@ -54,6 +54,26 @@
         <p>Light Sensors</p>
         <p>Distance Sensors</p>
         <p>WS2812B LEDs</p>
+
+        <figure>
+          <img
+            class="electronics-image"
+            alt="Image of the serial output showing how the value from the light sensor changes"
+            src="../images/electronics/serial-output-light-sensor.avif"
+            loading="lazy"
+          />
+          <figcaption>An image of the serial output showing how the value from the light sensor changes</figcaption>
+        </figure>
+
+        <figure>
+          <img
+            class="electronics-image"
+            alt="Image of the serial output showing how the value from the distance sensor changes"
+            src="../images/electronics/serial-output-distance-sensor.avif"
+            loading="lazy"
+          />
+          <figcaption>An image of the serial output showing how the value from the distance sensor changes</figcaption>
+        </figure>
       </section>
 
       <br /> -->
