Added to beta landing page

--- a/beta-landing-page.html
+++ b/beta-landing-page.html
@@ -9,11 +9,51 @@
 
     <title>Chris Bilger, M.C.S.</title>
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
-    <link rel="stylesheet" media="screen" href="./css/mvp.css" />
-    <link rel="stylesheet" media="screen" href="./css/styles.css" />
 
-    <script type="module" src="./js/theo/index.js"></script>
+    <style>
+      h1 {
+        font-family: "Roboto", sans-serif;
+        font-size: 3rem;
+        font-weight: 700;
+        color: #000000;
+        text-align: center;
+      }
+
+      h2 {
+        font-family: "Roboto", sans-serif;
+        font-size: 2rem;
+        font-weight: 700;
+        color: #000000;
+        text-align: center;
+      }
+    </style>
   </head>
 
-  <body></body>
+  <body>
+    <main>
+      <header>
+        <h1>Hi, I'm Chris Bilger</h1>
+
+        <h2>
+          I'm a Software Engineer specializing in Product Development, working at the intersection of technology and
+          mental health.
+        </h2>
+      </header>
+
+      <p>Content</p>
+      <p>Content</p>
+      <p>Content</p>
+
+      <header>
+        <nav>
+          <ul>
+            <li><a href="https://www.linkedin.com/in/chris-bilger/">LinkedIn</a></li>
+            <li><a href="https://www.linkedin.com/in/chris-bilger/">Portfolio</a></li>
+            <li><a href="https://www.linkedin.com/in/chris-bilger/">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/chris-bilger/">LinkedIn</a></li>
+          </ul>
+        </nav>
+      </header>
+    </main>
+  </body>
 </html>
