Added landing page

--- a/404.html
+++ b/404.html
@@ -24,7 +24,7 @@
       <section>
         <nav>
           <ul>
-            <li><a href="/">Back to Portfolio</a></li>
+            <li><a href="/portfolio">Back to Portfolio</a></li>
           </ul>
         </nav>
       </section>
