--- a/github/index.html
+++ b/github/index.html
@@ -37,7 +37,7 @@
       <section>
         <nav>
           <ul>
-            <li><a href="/">Back to Portfolio</a></li>
+            <li><a href="/portfolio">Back to Portfolio</a></li>
             <li><a href="https://github.com/ChristopherBilg" target="_blank">GitHub Profile</a></li>
           </ul>
         </nav>
