--- a/electronics/index.html
+++ b/electronics/index.html
@@ -36,7 +36,7 @@
       <section>
         <nav>
           <ul>
-            <li><a href="/">Back to Portfolio</a></li>
+            <li><a href="/portfolio">Back to Portfolio</a></li>
             <li><a href="#getting-started">Go to Getting Started</a></li>
           </ul>
         </nav>
