--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       }
 
       #intro-1 {
-        font-size: 6rem;
+        font-size: 7rem;
         margin: 2rem 0 0 0;
       }
 
@@ -81,8 +81,37 @@
       }
 
       @media only screen and (max-width: 1100px) {
+        #content-wrapper {
+          flex-direction: column;
+        }
+
+        #image-wrapper {
+          text-align: center;
+          margin: 2rem auto;
+        }
+
         #image {
-          display: none;
+          max-width: min(500px, 100%);
+        }
+      }
+
+      @media only screen and (max-width: 800px) {
+        #intro-1 {
+          font-size: 5rem;
+        }
+
+        #intro-2 {
+          font-size: 2rem;
+        }
+      }
+
+      @media only screen and (max-width: 525px) {
+        #intro-1 {
+          font-size: 3rem;
+        }
+
+        #intro-2 {
+          font-size: 1.5rem;
         }
       }
 
@@ -108,9 +137,10 @@
 
           <p class="details">
             You might know me from places like
-            <a href="https://www.talkiatry.com/">Talkiatry,</a>
+            <a href="https://www.talkiatry.com/">Talkiatry</a>
+            ,
             <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin</a>
-            or
+            , or
             <a href="https://somanotes.com/">Soma Notes.</a>
           </p>
 
