--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
       }
 
       @media only screen and (max-width: 1100px) {
+        #intro-1 {
+          font-size: 6rem;
+        }
+
         #content-wrapper {
           flex-direction: column;
         }
@@ -137,10 +141,9 @@
 
           <p class="details">
             You might know me from places like
-            <a href="https://www.talkiatry.com/">Talkiatry</a>
-            ,
-            <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin</a>
-            , or
+            <a href="https://www.talkiatry.com/">Talkiatry,</a>
+            <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin,</a>
+            or
             <a href="https://somanotes.com/">Soma Notes.</a>
           </p>
 
