--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
       body {
         margin: 3rem;
-        background-color: #e7dfdf;
+        background-color: #f5f5f5;
       }
 
       a {
@@ -116,6 +116,17 @@
 
         #intro-2 {
           font-size: 1.5rem;
+        }
+
+        #navigation {
+          & ul {
+            flex-direction: column;
+
+            & li {
+              margin-right: 0;
+              margin-bottom: 1rem;
+            }
+          }
         }
       }
 
