Fixed vscode formatting

--- a/index.html
+++ b/index.html
@@ -152,10 +152,9 @@
 
           <p class="details">
             You might know me from places like
-            <a href="https://www.talkiatry.com/">Talkiatry,</a>
-            <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin,</a>
-            or
-            <a href="https://somanotes.com/">Soma Notes.</a>
+            <a href="https://www.talkiatry.com/">Talkiatry</a>,
+            <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin</a>, or
+            <a href="https://somanotes.com/">Soma Notes</a>.
           </p>
 
           <p class="details">
@@ -164,7 +163,7 @@
             with, and
             <a href="https://chrisbilger.com/github/">create</a>
             new technologies, including both software and
-            <a href="https://chrisbilger.com/electronics/">hardware.</a>
+            <a href="https://chrisbilger.com/electronics/">hardware</a>.
           </p>
 
           <p class="details">
@@ -174,9 +173,7 @@
           </p>
 
           <p class="details">
-            Wish to contact me?
-            <a href="mailto:christopherbilg@gmail.com">Email</a>
-            is the best way.
+            Wish to contact me? <a href="mailto:christopherbilg@gmail.com">Email</a> is the best way.
           </p>
 
           <header>
