--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -205,7 +205,7 @@
           <h3>Master of Computer Science (M.C.S.)</h3>
           <p>Arizona State University</p>
           <p>August 2020 - August 2022</p>
-          <code>This degree has a concentration in Cybersecurity.</code>
+          <code>This degree has a concentration in <b>Cybersecurity</b>.</code>
         </aside>
 
         <aside>
