--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
 
           <p class="details">
             I like to
-            <a href="https://chrisbilger.com/projects/">experiment</a>
+            <a href="/projects">experiment</a>
             with, and
-            <a href="https://chrisbilger.com/github/">create</a>
+            <a href="/github">create</a>
             new technologies, including both software and
-            <a href="https://chrisbilger.com/electronics/">hardware</a>.
+            <a href="/electronics">hardware</a>.
           </p>
 
           <p class="details">
