--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
         margin: 0 auto;
       }
 
-      #intro-1 {
+      #name {
         font-size: 7rem;
         margin: 2rem 0 0 0;
       }
 
-      #content-wrapper {
+      #content {
         display: flex;
         justify-content: space-between;
         max-width: 1400px;
         margin: 0 auto;
       }
 
-      #intro-2 {
+      #description {
         font-size: 3rem;
         margin: 2rem 0;
         max-width: 900px;
       }
 
-      #current-title {
+      #title {
         font-weight: bold;
       }
 
@@ -72,49 +72,67 @@
         }
       }
 
-      #image-wrapper {
-        margin: auto 0;
-      }
-
       #image {
-        max-width: 500px;
+        margin: auto 0;
+
+        & img {
+          max-width: 500px;
+        }
       }
 
       @media only screen and (max-width: 1100px) {
-        #intro-1 {
+        #name {
           font-size: 6rem;
         }
 
-        #content-wrapper {
+        #content {
           flex-direction: column;
         }
 
-        #image-wrapper {
+        #image {
           text-align: center;
           margin: 2rem auto;
-        }
 
-        #image {
-          max-width: min(500px, 100%);
+          & img {
+            max-width: min(500px, 100%);
+          }
         }
       }
 
-      @media only screen and (max-width: 800px) {
-        #intro-1 {
+      @media only screen and (max-width: 900px) {
+        #name {
           font-size: 5rem;
         }
 
-        #intro-2 {
+        #description {
+          font-size: 2.5rem;
+        }
+      }
+
+      @media only screen and (max-width: 700px) {
+        body {
+          margin: 2rem;
+        }
+
+        #name {
+          font-size: 4rem;
+        }
+
+        #description {
           font-size: 2rem;
         }
       }
 
       @media only screen and (max-width: 525px) {
-        #intro-1 {
+        body {
+          margin: 1rem;
+        }
+
+        #name {
           font-size: 3rem;
         }
 
-        #intro-2 {
+        #description {
           font-size: 1.5rem;
         }
 
@@ -142,13 +160,13 @@
     <main>
       <div id="intro-header">
         <div>
-          <h1 id="intro-1">Hi, I'm Christopher Bilger</h1>
+          <h1 id="name">Hi, I'm Christopher Bilger</h1>
         </div>
       </div>
 
-      <div id="content-wrapper">
+      <div id="content">
         <div>
-          <h2 id="intro-2">I'm a Software Engineer specializing in Product Development.</h2>
+          <h2 id="description">I'm a Software Engineer specializing in Product Development.</h2>
 
           <p class="details">
             You might know me from places like
@@ -168,7 +186,7 @@
 
           <p class="details">
             I'm a
-            <span id="current-title">Senior Software Engineer</span>
+            <span id="title">Senior Software Engineer</span>
             at Talkiatry where I'm building a platform to make mental health care more accessible.
           </p>
 
@@ -176,20 +194,18 @@
             Wish to contact me? <a href="mailto:christopherbilg@gmail.com">Email</a> is the best way.
           </p>
 
-          <header>
-            <nav id="navigation">
-              <ul>
-                <li><a href="https://www.linkedin.com/in/christopher-bilger/">LinkedIn</a></li>
-                <li><a href="/Christopher-Bilger-Resume-August-2023.pdf">Resume</a></li>
-                <li><a href="/portfolio">Portfolio</a></li>
-                <li><a href="https://github.com/ChristopherBilg">GitHub</a></li>
-              </ul>
-            </nav>
-          </header>
+          <nav id="navigation">
+            <ul>
+              <li><a href="https://www.linkedin.com/in/christopher-bilger/">LinkedIn</a></li>
+              <li><a href="/Christopher-Bilger-Resume-August-2023.pdf">Resume</a></li>
+              <li><a href="/portfolio">Portfolio</a></li>
+              <li><a href="https://github.com/ChristopherBilg">GitHub</a></li>
+            </ul>
+          </nav>
         </div>
 
-        <div id="image-wrapper">
-          <img id="image" src="./images/landing.png" alt="Chris Bilger" />
+        <div id="image">
+          <img src="./images/landing.png" alt="Chris Bilger" />
         </div>
       </div>
     </main>
