fix: Hover color for hyperlinks on landing page

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         font-family: Georgia, "Times New Roman", Times, serif;
 
         &:hover {
-          color: #000;
+          color: #118bee;
         }
       }
 
