Updated soma notes references

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             You might know me from places like
             <a href="https://www.talkiatry.com/">Talkiatry</a>,
             <a href="https://www.lockheedmartin.com/en-us/index.html">Lockheed Martin</a>, or
-            <a href="https://somanotes.com/">Soma Notes</a>.
+            <a href="https://soma-notes.deno.dev/">Soma Notes</a>.
           </p>
 
           <p class="details">
