--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -240,7 +240,7 @@
           <h3>Owner</h3>
           <p>
             Soma Notes |
-            <a href="https://somanotes.com/" target="_blank">Website</a>
+            <a href="https://soma-notes.deno.dev/" target="_blank">Website</a>
           </p>
           <p>
             June 2023 -
