--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Christopher Bilger's Portfolio" />
-    <meta name="keywords" content="Resume, Portfolio, Personal, Projects, Electronics" />
+    <meta name="keywords" content="Resume, Portfolio, Personal, Projects" />
     <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -195,8 +195,7 @@
             <a href="/projects">experiment</a>
             with, and
             <a href="/github">create</a>
-            new technologies, including both software and
-            <a href="/electronics">hardware</a>.
+            new technologies. I also dabble in creating products of my own.
           </p>
 
           <p class="details">
@@ -212,7 +211,7 @@
           <nav id="navigation">
             <ul>
               <li><a href="https://www.linkedin.com/in/christopher-bilger/">LinkedIn</a></li>
-              <li><a href="/Christopher-Bilger-Resume-August-2023.pdf">Resume</a></li>
+              <li><a href="/Christopher-Bilger-Resume-November-2023.pdf">Resume</a></li>
               <li><a href="/portfolio">Portfolio</a></li>
               <li><a href="https://github.com/ChristopherBilg">GitHub</a></li>
             </ul>
