--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Christopher Bilger's Portfolio" />
-    <meta name="keywords" content="Resume, Portfolio, Personal, Projects, Electronics" />
+    <meta name="keywords" content="Resume, Portfolio, Personal, Projects" />
     <meta name="author" content="Christopher Bilger" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -25,7 +25,7 @@
         <img
           class="rounded-image"
           alt="Image of Christopher and Victoria Bilger"
-          src="../images/profile.avif"
+          src="../images/portfolio.avif"
           width="320"
           height="200.53"
           loading="lazy"
@@ -37,7 +37,7 @@
         <nav>
           <ul>
             <li>
-              <a href="../Christopher-Bilger-Resume-August-2023.pdf" target="_blank">Resume</a>
+              <a href="../Christopher-Bilger-Resume-November-2023.pdf" target="_blank">Resume</a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/christopher-bilger/" target="_blank">LinkedIn</a>
@@ -47,7 +47,6 @@
             </li>
             <li><a href="/github">GitHub</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a href="/electronics">Electronics</a></li>
           </ul>
         </nav>
       </section>
