--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         max-width: 900px;
       }
 
-      .red {
-        color: #8a0505;
+      .blue {
+        color: #118bee;
       }
 
       #introduction {
@@ -172,7 +172,7 @@
     <main>
       <div id="introduction">
         <div>
-          <h1 id="name">Hi, I'm <span class="red">Christopher Bilger</span></h1>
+          <h1 id="name">Hi, I'm <span class="blue">Christopher Bilger</span></h1>
         </div>
       </div>
 
@@ -180,7 +180,7 @@
         <div>
           <h2 id="description">
             I'm a Software Engineer specializing in
-            <span class="red">Product Development</span>.
+            <span class="blue">Product Development</span>.
           </h2>
 
           <p class="details">
@@ -200,7 +200,7 @@
 
           <p class="details">
             I'm a
-            <span id="title" class="red">Senior Software Engineer</span>
+            <span id="title" class="blue">Senior Software Engineer</span>
             at Talkiatry where I'm building a platform to make mental health care more accessible.
           </p>
 
