Update landing page

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       }
 
       a {
-        color: #808080;
-        transition: color 0.15s ease-in-out;
+        color: #000000;
         font-style: italic;
         font-family: Georgia, "Times New Roman", Times, serif;
+        font-weight: bold;
 
         &:hover {
           color: #118bee;
